[metadata]
name = pybaobabdt
version = 1.0.1
author = Stef van den Elzen
author_email = stefvandenelzen@gmail.com
description = Decision tree visualization
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.tue.nl/20040367/pybaobab
project_urls =
    Bug Tracker = https://gitlab.tue.nl/20040367/pybaobab/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src